# Advanced-Video

./: .gitignore  README.md
.github/workflows/: android.yml  android_screen_share.yml  iOS.yml  main.yml  test_upload.yml
AudioMixing/AudioMixing-Android-Java/: README.md  settings.gradle
AudioMixing/AudioMixing-Web-Vue/: README.md  vue.config.js
AudioMixing/AudioMixing-Win-Mac-QT/: Makefile  Makefile.Debug  Makefile.Release  NERtcSample-AudioMix.pri  NERtcSample-AudioMix.pro  README.md  audiomixsetting.cpp  audiomixsetting.h  audiomixsetting.ui  mainwindow.cpp  moc_audiomixsetting.cpp  moc_videoWindow.cpp  nrtc_engine.cpp  nrtc_engine.h  ui_audiomixsetting.h  ui_videowindow.h  videoWindow.cpp  videoWindow.h  videowidget.h  videowindow.ui
AudioMixing/AudioMixing-iOS-ObjC/: Podfile  README.md
AudioStream/AudioStream-iOS-ObjC/: Podfile
Beauty/Beauty-Android-Java/: README.md  build.gradle  settings.gradle
Beauty/Beauty-SenseTime-Android-Java/: .gitignore  README.md  settings.gradle
Beauty/Beauty-Win-Mac-QT/: Makefile  Makefile.Debug  Makefile.Release  NERtcSample-beauty.pri  NERtcSample-beauty.pro  README.md  invoker.h  macxhelper.h  macxhelper.mm  main.cpp  mainwindow.cpp  moc_invoker.cpp  moc_macxhelper.cpp  moc_nrtc_engine.cpp  moc_videoWindow.cpp  moc_videowidget.cpp  nrtc_engine.cpp  nrtc_engine.h  nrtcengine_event_handler.cpp  nrtcengine_event_handler.h  ui_videowidget.h  ui_videowindow.h  videoWindow.cpp  videoWindow.h  videowidget.cpp  videowidget.h  videowindow.ui
Beauty/Beauty-iOS-ObjC/: .gitignore  Podfile  README.md
DeviceManager/AVManage-Android-Java/: README.md  settings.gradle
DeviceManager/DeviceManager-Web-Vue/: README.md
DeviceManager/DeviceManager-Win-Mac-QT/: NERtcSample-Audio-VideoManger.pro  mainwindow.cpp  mainwindow.h  nrtc_engine.cpp  nrtcengine_event_handler.cpp  videoWindow.h
DeviceManager/DeviceManager-iOS-ObjC/: Podfile  README.md
ExternalVideo/ExternalVideo-Android-Java/: README.md  local.properties  settings.gradle
ExternalVideo/ExternalVideo-Web-Vue/: README.md  vue.config.js
ExternalVideo/ExternalVideo-Win-Mac-QT/: NERtcSample-ExternalVideo.pri  NERtcSample-ExternalVideo.pro  README.md  Toast.cpp  Toast.h  mainwindow.cpp  mainwindow.h  nrtc_engine.cpp  nrtc_engine.h  videoWindow.cpp  videoWindow.h  videosurface.cpp  videosurface.h  videowidget.cpp  videowidget.h  videowindow.ui
ExternalVideo/ExternalVideo-iOS-ObjC/: Podfile  README.md
ExternalVideo/ExternalVideo-iOS-Objc/: Podfile
MediaStats/MediaStats-Android-Java/: README.md  settings.gradle
MediaStats/MediaStats-Web-Vue/: README.md  vue.config.js
MediaStats/MediaStats-Win-Mac-QT/: Makefile  Makefile.Debug  Makefile.Release  NERtcSample-statistics.pri  NERtcSample-statistics.pro  README.md  mainwindow.cpp  nrtc_engine.cpp  nrtc_engine.h  nrtcengine_event_handler.cpp  nrtcengine_event_handler.h  stats.ui  statswidget.cpp  statswidget.h  statswidget.ui  ui_statswidget.h  ui_videowindow.h  videoWindow.cpp  videoWindow.h  videowidget.cpp  videowindow.ui
MediaStats/MediaStats-iOS-ObjC/: Podfile  README.md
MediaStats/MediaStats-iOS-Objc/: Podfile
NEBeauty/Android/: README.md
NEBeauty/Mac/: README.md
NEBeauty/PC/: README.md
NEBeauty/PC/personcall-1v1_nertc_beauty/source/: CMakeLists.txt
NEBeauty/PC/personcall-1v1_nertc_beauty/source/include/: beauty_tabwidget.h  call_widget.h  engine.h  face_beauty_widget.h  filter_beauty_widget.h  item_sticker_widget.h  join_widget.h  other_beauty_widget.h  room_button.h  skin_beauty_widget.h
NEBeauty/PC/personcall-1v1_nertc_beauty/source/src/: beauty_item_widget.cpp  beauty_tabwidget.cpp  call_widget.cpp  engine.cpp  face_beauty_widget.cpp  filter_beauty_widget.cpp  item_sticker_widget.cpp  join_widget.cpp  other_beauty_widget.cpp  room_button.cpp  skin_beauty_widget.cpp
NEBeauty/iOS/: .gitignore  README.md
NERtcSample-ScreenShare-iOS-Objective-C/: Podfile
NERtcSample-ScreenShare-iOS-Objective-C/NERtcSample-ScreenShare-iOS-Objective-C/: NTESAppDelegate.h  (+1 more)
NERtcSample-ScreenShare-iOS-Objective-C/NERtcSample-ScreenShare-iOS-Objective-C.xcodeproj/: project.pbxproj
NERtcSample-ScreenShare-iOS-Objective-C/NERtcSample-ScreenShare-iOS-Objective-C.xcworkspace/: contents.xcworkspacedata
STBeauty/Android/: README.md
(+1268 files in other folders)
